# llmur

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENCE  LICENSE  MVP-tasks.md  Makefile  README.md  config.yaml  docker-compose.yaml  grafana-datasources.yaml  loki-config.yaml  otel-collector-config.yaml  prometheus.yaml  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: checks.yaml  pages.yaml  pages.yaml.yml  publish.yaml  release.yaml
docs/: README.md  hugo.yaml
docs/content/: _index.md  about.md
docs/content/docs/: _index.md
docs/content/docs/self-hosting/: _index.md
docs/content/docs/self-hosting/configuration/: _index.md  database-backed.md  standalone.md
docs/content/docs/self-hosting/deployment/: _index.md
docs/content/docs/self-hosting/deployment/local/: _index.md
docs/content/docs/self-hosting/deployment/production/: _index.md
integration-tests/: README.md  api_client.py  config.py  conftest.py  pyproject.toml  run_tests.py  test_chat_completions.py  test_connection_deployment_maps.py  test_connections.py  test_deployments.py  test_embeddings.py  test_graph.py  test_load_balancing.py  test_memberships.py  test_project_invite_codes.py  test_projects.py  test_session_tokens.py  test_users.py  test_virtual_key_deployment_maps.py  test_virtual_keys.py
llmur/: Cargo.toml  README.md
llmur-proxy/: Cargo.toml
llmur-proxy/src/: configuration.rs  main.rs
llmur/postgres/migration/: 0001_commons.sql  0002_user.sql  0003_session_tokens.sql  0004_project.sql  0005_memberships.sql  0006_project_invites.sql  0007_connections.sql  0008_deployments.sql  0009_deployment_connections.sql  0010_project_deployments.sql  0011_virtual_keys.sql  0012_virtual_key_deployments.sql  0013_request_logs.sql
llmur/src/: configuration.rs  errors.rs  lib.rs  main.rs  metrics.rs  otel.rs  utils.rs
llmur/src/data/: connection.rs  connection_deployment.rs  deployment.rs  errors.rs  limits.rs  load_balancer.rs  macros.rs  membership.rs  mod.rs  project.rs  project_invite_code.rs  request_log.rs  session_token.rs  usage.rs  user.rs  utils.rs  virtual_key.rs  virtual_key_deployment.rs
llmur/src/data/graph/: local_store.rs  mod.rs  usage_stats.rs
llmur/src/data/password/: mod.rs  scheme01.rs
llmur/src/providers/: mod.rs  utils.rs
llmur/src/providers/azure/openai/: mod.rs
llmur/src/providers/azure/openai/v1/: common.rs  mod.rs
llmur/src/providers/azure/openai/v1/chat_completions/: request.rs  response.rs  stream.rs
llmur/src/providers/azure/openai/v1/embeddings/: request.rs  response.rs
llmur/src/providers/azure/openai/v1/responses/: request.rs  response.rs  stream.rs  types.rs
llmur/src/providers/azure/openai/v2024_02_01/chat_completions/: message.rs  mod.rs  request.rs  response.rs  stop.rs  tool.rs
llmur/src/providers/azure/openai/v2024_10_21/chat_completions/: README.md  extension.rs  format.rs  message.rs  mod.rs  request.rs  response.rs  stop.rs  stream.rs  tool.rs
llmur/src/providers/azure/openai/v2024_10_21/embeddings/: request.rs  response.rs
llmur/src/providers/gemini/: mod.rs
llmur/src/providers/gemini/v1beta/: mod.rs
llmur/src/providers/gemini/v1beta/embed_content/: request.rs  response.rs
llmur/src/providers/gemini/v1beta/generate_content/: README.md  request.rs  response.rs
llmur/src/providers/openai/: mod.rs
llmur/src/providers/openai/chat_completions/: README.md  audio.rs  format.rs  message.rs  mod.rs  prediction.rs  request.rs  response.rs  stop.rs  stream.rs  tool.rs  web_search.rs
llmur/src/providers/openai/embeddings/: request.rs  response.rs
llmur/src/providers/openai/responses/: request.rs  response.rs  stream.rs  types.rs
llmur/src/routes/: chat_completions.rs  connection.rs  connection_deployment.rs  deployment.rs  embeddings.rs  macros.rs  membership.rs  mod.rs  project.rs  project_invite_code.rs  responses.rs  session_token.rs  user.rs  virtual_key.rs  virtual_key_deployment.rs
llmur/src/routes/extract/: mod.rs  openai_request_data.rs
llmur/src/routes/extractors/: graph_extractor.rs  mod.rs  openai_request_data.rs
llmur/src/routes/middleware/: auth.rs  common.rs  common_tracing_mw.rs  mod.rs  openai_route_controller_mw.rs  tracing.rs  user_context.rs  user_context_load_mw.rs
llmur/src/routes/middlewares/: auth_token_extraction_mw.rs  mod.rs  openai_route_controller_mw.rs  openai_route_handler_mw.rs
llmur/src/routes/openai/: controller.rs  logging.rs  mod.rs  request.rs  response.rs
llmur/src/routes/responders/: openai_responder.rs
llmur/src/routes/response/: mod.rs  openai_responder.rs
src/: lib.rs
src/azure/: mod.rs
src/azure/v2024_02_01/: mod.rs
src/azure/v2024_02_01/chat_completion/: mod.rs  request.rs  response.rs
src/azure/v2024_02_01/chat_completion/transformer/: mod.rs
src/azure/v2024_02_01/chat_completion/transformer/from_openai_v1/: request.rs
src/azure/v2024_02_01/chat_completion/transformer/to_openai_v1/: response.rs
src/openai/v1/: mod.rs
src/openai/v1/chat_completion/: request.rs  response.rs
src/openai/v1/embeddings/: request.rs
