[package]
name = "llmur"
version = "0.0.1"
edition = "2021"
authors     = ["Andre Machado"]
description = "arge Language Model Unified Request"
license     = "MIT"
readme      = "README.md"
repository  = "https://github.com/llmur/llmur"

[dependencies]
# -------- Mandatory --------
# -- Json
serde_json = { version = "1.0.118" }

# -------- Optional --------
# -- Json
serde = { version = "1.0.203", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
transformer = []
azure = []
full = ["serde", "transformer", "azure"]

[dev-dependencies]
llmur = { path = ".", default-features = false, features = ["full"] }