[workspace]
resolver = "1"
members = [
    "llmur",
    "llmur-proxy"
]

[workspace.dependencies]
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

axum = { version = "0.8.4", features = ["macros"] }
#axum-login = "0.16.0"
#utoipa-axum = { version = "0.1.2" }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid"]}
utoipa-swagger-ui = {version =  "8.0.3", features = ["axum"] }

tokio = { version = "1.48.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["trace"] }
http-body-util = "0.1.3"

uuid = { version = "1.14.0", features = ["v5", "v7", "serde", "macro-diagnostics"] }
thiserror = "2.0.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132" }
serde_yaml = { version = "0.9.33" }
time = { version = "0.3.36", features = ["formatting", "parsing", "serde"] }
lazy-regex = "3.3.0"

# Crypt
hex = "0.4.3"
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
sha2 = "0.10.8"
hmac = { version = "0.12.1" }

# Database access
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "mysql", "chrono", "uuid", "migrate", "runtime-async-std", "chrono"] }
#bb8-redis = { version = "0.21.0" }
redis = { version = "0.29.0", features = ["uuid", "aio", "async-std-comp"]}

# Http
reqwest = { version = "0.12.9" }

async-trait = "0.1.83"

email_address = "0.2.9"

paste = "1.0.15"


opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"

tracing-opentelemetry = "0.32.0"
