[package]
name = "llmur-proxy"
version = "0.0.1"
edition = "2021"

[dependencies]
llmur = { path = "../llmur" }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

async-trait = { workspace = true }

clap = "4.5.18"
clap_derive = "4.5.18"