[package]
name = "llmur"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
email_address = { workspace = true }
derive-getters = "0.5.0"
utoipa = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
paste = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http-body-util = { workspace = true }
lazy-regex = { workspace = true }

# Crypt
hex = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
chrono = "0.4.42"
log = "0.4.28"
futures = "0.3.31"
